--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "foodie roulette",
+  "name": "foodieRoulette",
   "version": "0.0.1",
   "description": "Play a roulette game to select 3 highly rated delectable tasty food items and have the app plan your night out. Found an insatiable treat? Upload it to the app so others can enjoy it too next time they plan their foodie-night-out event.",
   "main": "server.js",
   "scripts": {
-    // "test": "grunt test"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -12,9 +12,7 @@
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    
-  },
+  "bugs": {},
   "homepage": "https://github.com/periwinkleDeer/periwinkleDeer",
   "dependencies": {
     "body-parser": "^1.13.3",
@@ -25,5 +23,12 @@
     "morgan": "^1.6.1"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-html-replace": "^1.5.1",
+    "gulp-react": "^3.0.1",
+    "gulp-uglify": "^1.3.0",
+    "uglify-js": "^2.4.24"
   }
 }
