Run server and gulp on start

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Play a roulette game to select 3 highly rated delectable tasty food items and have the app plan your night out. Found an insatiable treat? Upload it to the app so others can enjoy it too next time they plan their foodie-night-out event.",
   "main": "server.js",
   "scripts": {
+    "start": "{ gulp & nodemon server/server.js & }",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
