--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "{ gulp & nodemon server/server.js & }",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "{ ./node_modules/bower/bin/bower install & gulp production & }"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "mongoose": "^4.1.3",
     "morgan": "^1.6.1"
   },
   "devDependencies": {
