--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "{ gulp & nodemon server/server.js & }",
-    "postinstall": "{ ./node_modules/bower/bin/bower install & gulp production & }"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -25,12 +25,13 @@
     "morgan": "^1.6.1"
   },
   "devDependencies": {
+    "browserify": "^11.0.1",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.2.0",
     "gulp-html-replace": "^1.5.1",
-    "gulp-react": "^3.0.1",
-    "gulp-uglify": "^1.3.0",
-    "uglify-js": "^2.4.24"
+    "gulp-streamify": "^1.0.0",
+    "gulp-uglify": "^1.1.0",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.1"
   }
 }
