--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ dist/
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
-client/components
+server/yelpkey.js
+
 
 .DS_STORE
