--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "mongoose": "^4.1.3",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "q": "^1.4.1",
+    "yelp": "^0.2.0"
   },
   "devDependencies": {
     "browserify": "^11.0.1",
