--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ dist/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 server/yelpkey.js
+client/fbid.js
 
 
 .DS_STORE
