--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.13.3",
     "bower": "^1.3.9",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "mongoose": "^4.1.3",
@@ -31,6 +32,8 @@
     "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
     "reactify": "^1.1.1",
+    "really-need": "^1.6.3",
+    "supertest": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
   }
