Refactor db, enable geolocation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "q": "^1.4.1",
+    "sequelize": "^3.6.0",
     "yelp": "^0.2.0"
   },
   "devDependencies": {
