--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "google-distance-matrix": "0.0.3",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "q": "^1.4.1",
