--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "google-distance-matrix": "0.0.3",
-    "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "q": "^1.4.1",
-    "sequelize": "^3.6.0",
-    "yelp": "^0.2.0"
+    "sequelize": "^3.6.0"
   },
   "devDependencies": {
     "browserify": "^11.0.1",
