--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,6 @@
     "bootstrap": "~3.2.0",
     "underscore": "~1.8.3",
     "react": "~0.13.3",
-    "react-router": "~0.13.3",
+    "react-router": "~0.13.3"
   }
 }
