--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-session": "^1.11.3",
     "google-distance-matrix": "0.0.3",
     "morgan": "^1.6.1",
+    "pg": "^4.4.1",
+    "pg-hstore": "^2.3.2",
     "q": "^1.4.1",
     "sequelize": "^3.6.0"
   },
