--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "q": "^1.4.1",
+    "react": "^0.13.3",
+    "react-star-rating": "^1.3.2",
     "sequelize": "^3.6.0"
   },
   "devDependencies": {
