--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   },
   "devDependencies": {
     "browserify": "^11.0.1",
+    "chai": "^3.2.0",
+    "expect.js": "^0.3.1",
     "gulp": "^3.9.0",
     "gulp-html-replace": "^1.5.1",
     "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
+    "mocha": "^2.3.0",
     "reactify": "^1.1.1",
     "really-need": "^1.6.3",
     "supertest": "^1.1.0",
