--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "pg-hstore": "^2.3.2",
     "q": "^1.4.1",
     "react": "^0.13.3",
-    "react-star-rating": "^1.3.2",
+    "react-rating": "0.0.15",
     "sequelize": "^3.6.0"
   },
   "devDependencies": {
