--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiled Dirs (http://nodejs.org/api/addons.html)
-dist/
+dist/components/
 
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
