--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Play a roulette game to select 3 highly rated delectable tasty food items and have the app plan your night out. Found an insatiable treat? Upload it to the app so others can enjoy it too next time they plan their foodie-night-out event.",
   "main": "server.js",
   "scripts": {
+    "build": "gulp production",
     "start": "{ gulp & nodemon server/server.js & }",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
@@ -30,21 +31,21 @@
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-rating": "0.0.15",
-    "sequelize": "^3.6.0"
-  },
-  "devDependencies": {
-    "browserify": "^11.0.1",
-    "chai": "^3.2.0",
-    "expect.js": "^0.3.1",
     "gulp": "^3.9.0",
+    "browserify": "^11.0.1",
     "gulp-html-replace": "^1.5.1",
     "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
-    "mocha": "^2.3.0",
     "reactify": "^1.1.1",
+    "watchify": "^3.3.1",
+    "sequelize": "^3.6.0"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "expect.js": "^0.3.1",
+    "mocha": "^2.3.0",
     "really-need": "^1.6.3",
     "supertest": "^1.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
+    "vinyl-source-stream": "^1.1.0"
   }
 }
