--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "gulp-uglify": "^1.1.0",
     "reactify": "^1.1.1",
     "watchify": "^3.3.1",
-    "sequelize": "^3.6.0"
+    "sequelize": "^3.6.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
@@ -45,6 +46,5 @@
     "mocha": "^2.3.0",
     "really-need": "^1.6.3",
     "supertest": "^1.1.0",
-    "vinyl-source-stream": "^1.1.0"
   }
 }
