--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "expect.js": "^0.3.1",
     "mocha": "^2.3.0",
     "really-need": "^1.6.3",
-    "supertest": "^1.1.0",
+    "supertest": "^1.1.0"
   }
 }
