--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "{ gulp & nodemon server/server.js & }",
-    "postinstall": "{ ./node_modules/bower/bin/bower install & gulp moving & }"
+    "postinstall": "{ ./node_modules/bower/bin/bower install & gulp production & }"
   },
   "repository": {
     "type": "git",
