--- a/package.json
+++ b/package.json
@@ -23,22 +23,21 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
-    "google-distance-matrix": "0.0.3",
     "morgan": "^1.6.1",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "q": "^1.4.1",
     "react": "^0.13.3",
     "react-rating": "0.0.15",
-    "gulp": "^3.9.0",
+    "sequelize": "^3.6.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.3.1",
     "browserify": "^11.0.1",
+    "gulp": "^3.9.0",
     "gulp-html-replace": "^1.5.1",
     "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
-    "reactify": "^1.1.1",
-    "watchify": "^3.3.1",
-    "sequelize": "^3.6.0",
-    "vinyl-source-stream": "^1.1.0"
+    "reactify": "^1.1.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
