--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "gulp-html-replace": "^1.5.1",
     "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "ejs": "2.3.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
