Added dependencies to find package.json

--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,12 @@
 general:
   build_dir: periwinkleDeer
 
+## Dependencies
+dependencies:
+  pre:
+    - package.json
 
+## Tests
+test:
+  override: 
+    - mocha test
