--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "{ gulp & nodemon server/server.js & }",
-    "test": "gulp test",
+    "test": "gulp lint",
     "postinstall": "{ ./node_modules/bower/bin/bower install & gulp production & }"
   },
   "repository": {
