--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     "sequelize": "^3.6.0",
     "serve-favicon": "^2.3.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
+    "watchify": "^3.3.1",
+    "gulp-jshint": "^1.11.2"
   },
   "devDependencies": {
     "chai": "^3.2.0",
     "expect.js": "^0.3.1",
-    "gulp-jshint": "^1.11.2",
     "mocha": "^2.3.0",
     "really-need": "^1.6.3",
     "supertest": "^1.1.0"
