test deployment again

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
-# deployment:
-#   staging:
-#     branch: master
-#     heroku:
-#       appname: foo-bar-123
+deployment:
+  prod:
+    branch: master
+    heroku:
+      appname: nibbler
