--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
-deployment:
-  prod:
-    branch: master
-    heroku:
-      appname: nibbler
+# deployment:
+#   prod:
+#     branch: master
+#     heroku:
+#       appname: nibbler
